Third Iteration, New Section: Research Publications,Included  Proper Links, Improved Profile Picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="hero">
         <div class="hero-content">
-            <img src="assets/images/profile_picture.jpeg" alt="Shaheer Ahmad" class="hero-img">
+            <img src="assets/images/profile.jpg" alt="Shaheer Ahmad" class="hero-img">
             <h1>Shaheer Ahmad</h1>
             <p class="subtitle">AI Engineer | Deep Learning | Voice AI</p>
             <a href="#contact" class="cta-button">Get In Touch</a>
@@ -25,9 +25,10 @@
         <h2>Featured Projects</h2>
         
         <div class="project-card">
-            <h3><a href="https://www.upliftai.com" target="_blank">Orator Voice AI Suite</a></h3>
+            <h3><a href="https://upliftai.org/" target="_blank">Orator Voice AI Suite</a></h3>
             <p class="project-role">Foundational Engineer @ Uplift AI (YC S25)</p>
             <p>Led development of production TTS system for Urdu, Balochi, and Sindhi, serving 50,000+ daily users. Architected end-to-end ML pipeline (400+ hours audio curation, model training, API deployment) delivering 60% higher user preference vs. OpenAI/Microsoft at 1/60th the cost. Enabled Khan Academy to produce 500 educational videos in 1 week, impacting 142M+ low-literacy adults.</p>
+            <a href="https://www.ycombinator.com/companies/uplift-ai" class="project-link" target="_blank">YC Company Profile →</a>
             <div class="tech-tags">
                 <span>PyTorch</span>
                 <span>AWS</span>
@@ -39,6 +40,7 @@
         <div class="project-card">
             <h3>Distributed RAG System (DRAG)</h3>
             <p>Designed production-grade distributed RAG on AWS using SageMaker, Bedrock, Lambda, and API Gateway. Optimized for high throughput: 1M+ documents, 120,000+ tokens/minute with fault-tolerant autoscaling infrastructure.</p>
+            <a href="https://drag.zetasolutions.org" class="project-link" target="_blank">System Architecture →</a>
             <div class="tech-tags">
                 <span>AWS</span>
                 <span>LangChain</span>
@@ -55,7 +57,16 @@
                 <span>PyTorch</span>
                 <span>Federated Learning</span>
             </div>
-            <a href="https://github.com/shaheer_ahmad/DL_project" class="project-link" target="_blank">View on GitHub →</a>
+            <a href="https://codeocean.com/capsule/8046507/tree/v1" class="project-link" target="_blank">CodeOcean Capsule →</a>
+        </div>
+    </section>
+
+    <section id="publications">
+        <h2>Publications</h2>
+        <div class="pub-item">
+            <h3><a href="https://drive.google.com/file/d/17r1Dv8AVi2Ztdl5DECMqtFV_PDsMwNhm/view?pli=1" target="_blank">A Hybrid Model for Spatio-Temporal Traffic Forecasting with Extreme Value Prediction</a></h3>
+            <p class="pub-meta">Omer Abdul Jalil, Shaheer Ahmad, Muhammad Tahir, Zubair Khalid, Momin Uppal</p>
+            <p>Spatio-Temporal Analysis | Submitted to ACM Transactions on Knowledge Discovery from Data (TKDD)</p>
         </div>
     </section>
 
