fixed profile picture (included wrong path before)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="hero">
         <div class="hero-content">
-            <img src="assets/images/profile.jpg" alt="Shaheer Ahmad" class="hero-img">
+            <img src="assets/images/profile_picture.jpeg" alt="Shaheer Ahmad" class="hero-img">
             <h1>Shaheer Ahmad</h1>
             <p class="subtitle">AI Engineer | Deep Learning | Voice AI</p>
             <a href="#contact" class="cta-button">Get In Touch</a>
