Reverted Back to Circular Logo, Seperate Links, correct Path

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         <h2>Featured Projects</h2>
         
         <div class="project-card">
-            <h3><a href="https://upliftai.org/" target="_blank">Orator Voice AI Suite</a></h3>
+            <h3>Orator Voice AI Suite</h3>
             <p class="project-role">Foundational Engineer @ Uplift AI (YC S25)</p>
             <p>Led development of production TTS system for Urdu, Balochi, and Sindhi, serving 50,000+ daily users. Architected end-to-end ML pipeline (400+ hours audio curation, model training, API deployment) delivering 60% higher user preference vs. OpenAI/Microsoft at 1/60th the cost. Enabled Khan Academy to produce 500 educational videos in 1 week, impacting 142M+ low-literacy adults.</p>
+            <a href="https://upliftai.org/" class="project-link" target="_blank">Uplift AI →</a>
             <a href="https://www.ycombinator.com/companies/uplift-ai" class="project-link" target="_blank">YC Company Profile →</a>
             <div class="tech-tags">
                 <span>PyTorch</span>
@@ -52,21 +53,22 @@
         <div class="project-card">
             <h3>Hyb-STEX Traffic Prediction</h3>
             <p>Developed scalable spatio-temporal traffic forecasting system boosting accuracy by 15%. Applied self-supervised and federated learning on large-scale CAREEM datasets. Paper submitted to ACM TKDD.</p>
+            <a href="https://codeocean.com/capsule/8046507/tree/v1" class="project-link" target="_blank">CodeOcean Capsule →</a>
             <div class="tech-tags">
                 <span>Graph Neural Networks</span>
                 <span>PyTorch</span>
                 <span>Federated Learning</span>
             </div>
-            <a href="https://codeocean.com/capsule/8046507/tree/v1" class="project-link" target="_blank">CodeOcean Capsule →</a>
         </div>
     </section>
 
     <section id="publications">
         <h2>Publications</h2>
         <div class="pub-item">
-            <h3><a href="https://drive.google.com/file/d/17r1Dv8AVi2Ztdl5DECMqtFV_PDsMwNhm/view?pli=1" target="_blank">A Hybrid Model for Spatio-Temporal Traffic Forecasting with Extreme Value Prediction</a></h3>
+            <h3>A Hybrid Model for Spatio-Temporal Traffic Forecasting with Extreme Value Prediction</h3>
             <p class="pub-meta">Omer Abdul Jalil, Shaheer Ahmad, Muhammad Tahir, Zubair Khalid, Momin Uppal</p>
             <p>Spatio-Temporal Analysis | Submitted to ACM Transactions on Knowledge Discovery from Data (TKDD)</p>
+            <a href="https://drive.google.com/file/d/17r1Dv8AVi2Ztdl5DECMqtFV_PDsMwNhm/view?pli=1" class="project-link" target="_blank">View Paper →</a>
         </div>
     </section>
 
