--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <div class="hero-content">
             <img src="assets/images/profile_picture.jpeg" alt="Shaheer Ahmad" class="hero-img">
             <h1>Shaheer Ahmad</h1>
-            <p class="subtitle">AI Engineer | Deep Learning | Voice AI</p>
-            <a href="#contact" class="cta-button">Get In Touch</a>
+            <p class="subtitle">AI Engineer | Deep Learning | Voice AI | HCI </p>
+            <div class="hero-buttons">
+                <a href="#contact" class="cta-button">Get In Touch</a>
+                <a href="assets/downloads/Shaheer_Ahmad_CV.pdf" class="cv-button" download>Download CV</a>
+            </div>
         </div>
     </header>
 
