--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="hero-content">
             <img src="assets/images/profile_picture.jpeg" alt="Shaheer Ahmad" class="hero-img">
             <h1>Shaheer Ahmad</h1>
-            <p class="subtitle">AI Engineer | Deep Learning | Voice AI | HCI </p>
+            <p class="subtitle">AI Engineer | Deep Learning | Voice AI | HCI</p>
             <div class="hero-buttons">
                 <a href="#contact" class="cta-button">Get In Touch</a>
                 <a href="assets/downloads/Shaheer_Ahmad_CV.pdf" class="cv-button" download>Download CV</a>
@@ -123,5 +123,9 @@
     <footer>
         <p>&copy; 2025 Shaheer Ahmad. All rights reserved.</p>
     </footer>
+
+    <button id="theme-toggle-button" aria-label="Toggle theme">🌙</button>
+
+    <script src="assets/js/theme.js"></script>
 </body>
 </html>
