Fixed the CV Problem

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p class="subtitle">AI Engineer | Deep Learning | Voice AI | HCI</p>
             <div class="hero-buttons">
                 <a href="#contact" class="cta-button">Get In Touch</a>
-                <a href="assets/downloads/Shaheer_Ahmad_CV.pdf" class="cv-button" download>Download CV</a>
+                <a href="https://docs.google.com/document/d/14DznrhuFj_NiUjZR9CoyonSvK-s5ZEAC/edit?usp=sharing&ouid=114197916759119754540&rtpof=true&sd=true" class="cv-button" target="_blank">CV</a>
             </div>
         </div>
     </header>
